--- a/2.2.1数据预处理.ipynb
+++ b/2.2.1数据预处理.ipynb
@@ -8,7 +8,10 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.makedirs(os.path.join('..', 'data', 'house_tiny.csv'))\n",
+    "# os.path.join是Python的os模块中的一个函数，用于智能地拼接路径字符串，生成一个有效的文件或目录路径。\n",
+    "# 使用os.makedirs创建一个目录路径。如果目录已经存在，exist_ok=True参数会阻止抛出异常。这里创建的是位于上一级目录中的data目录。\n",
+    "os.makedirs(os.path.join('..', 'data'), exist_ok=True)\n",
+    "\n",
     "data_file = os.path.join"
    ]
   }
