--- a/2.2.1数据预处理.ipynb
+++ b/2.2.1数据预处理.ipynb
@@ -1,19 +1,195 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "40ca88df",
+   "metadata": {},
+   "source": [
+    "# 生成数据"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "85db70a2",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
+    "\n",
     "# os.path.join是Python的os模块中的一个函数，用于智能地拼接路径字符串，生成一个有效的文件或目录路径。\n",
     "# 使用os.makedirs创建一个目录路径。如果目录已经存在，exist_ok=True参数会阻止抛出异常。这里创建的是位于上一级目录中的data目录。\n",
     "os.makedirs(os.path.join('..', 'data'), exist_ok=True)\n",
     "\n",
-    "data_file = os.path.join"
+    "# 创建目录路径\n",
+    "data_file = os.path.join('..', 'data', 'house_tiny.csv')\n",
+    "\n",
+    "# 打开文件，并把文件当成f\n",
+    "with open(data_file, 'w') as f:\n",
+    "    f.write('NumRooms,Alley,Price\\n')  # 列名\n",
+    "    f.write('NA,Pave,127500\\n')  # 每行表示一个数据样本\n",
+    "    f.write('2,NA,106000\\n')\n",
+    "    f.write('4,NA,178100\\n')\n",
+    "    f.write('NA,NA,140000\\n')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1edd1677",
+   "metadata": {},
+   "source": [
+    "# 打印数据"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "7fb9c780",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   NumRooms Alley   Price\n",
+      "0       NaN  Pave  127500\n",
+      "1       2.0   NaN  106000\n",
+      "2       4.0   NaN  178100\n",
+      "3       NaN   NaN  140000\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "data = pd.read_csv(data_file)\n",
+    "print(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15ba6c8b",
+   "metadata": {},
+   "source": [
+    "# 处理缺失值 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "8791b612",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   NumRooms Alley\n",
+      "0       3.0  Pave\n",
+      "1       2.0   NaN\n",
+      "2       4.0   NaN\n",
+      "3       3.0   NaN\n"
+     ]
+    }
+   ],
+   "source": [
+    "# iloc选择指定和列，逗号前面为行，逗号后面为列\n",
+    "inputs, outputs = data.iloc[:, 0:2], data.iloc[:, 2]\n",
+    "# 利用每一列的均值填充NaN\n",
+    "inputs = inputs.fillna(inputs.mean())\n",
+    "print(inputs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "643e0cc6",
+   "metadata": {},
+   "source": [
+    "# 独热编码"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "665e586d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   NumRooms  Alley_Pave  Alley_nan\n",
+      "0       3.0           1          0\n",
+      "1       2.0           0          1\n",
+      "2       4.0           0          1\n",
+      "3       3.0           0          1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# get_dummies为独热编码，dummy_na为是否将缺失值考虑在内\n",
+    "inputs = pd.get_dummies(inputs, dummy_na=True)\n",
+    "print(inputs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65ef5742",
+   "metadata": {},
+   "source": [
+    "# 转换为张量格式"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "ceebcf70",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[3., 1., 0.],\n",
+       "         [2., 0., 1.],\n",
+       "         [4., 0., 1.],\n",
+       "         [3., 0., 1.]], dtype=torch.float64),\n",
+       " tensor([127500., 106000., 178100., 140000.], dtype=torch.float64))"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "X = torch.tensor(inputs.to_numpy(dtype=float))\n",
+    "Y = torch.tensor(outputs.to_numpy(dtype=float))\n",
+    "X, Y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb1464d5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f42fa09",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a596f7f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
