--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "db8183fb",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "869746a4",
    "metadata": {},
    "outputs": [
@@ -26,17 +26,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([100, 1, 10])\n",
-      "torch.Size([100, 8, 9])\n"
+      "tensor([[[ 0.2870, -1.0968, -0.0337],\n",
+      "         [ 0.4879,  2.1416, -0.4512],\n",
+      "         [-1.3082, -0.2179,  0.4709],\n",
+      "         [-0.8301, -1.8590,  0.1282],\n",
+      "         [-1.2741,  0.4424,  0.4525]],\n",
+      "\n",
+      "        [[-0.2584, -1.0227, -0.2441],\n",
+      "         [ 0.4758, -1.4311,  0.7692],\n",
+      "         [ 1.2712, -0.1913,  1.5490],\n",
+      "         [ 0.4311,  0.5243,  1.3519],\n",
+      "         [ 0.0739, -0.0790, -0.2862]]])\n",
+      "tensor([[[ 0.9607, -1.3791,  0.4184],\n",
+      "         [-0.2223,  1.3206, -1.0984],\n",
+      "         [-1.3058,  0.1827,  1.1231],\n",
+      "         [ 0.0290, -1.2390,  1.2100],\n",
+      "         [-1.4142,  0.7009,  0.7133]],\n",
+      "\n",
+      "        [[ 0.6873, -1.4140,  0.7266],\n",
+      "         [ 0.5514, -1.4035,  0.8521],\n",
+      "         [ 0.5173, -1.3985,  0.8812],\n",
+      "         [-0.8168, -0.5914,  1.4082],\n",
+      "         [ 1.1586,  0.1226, -1.2811]]], grad_fn=<NativeLayerNormBackward0>)\n"
      ]
     }
    ],
    "source": [
-    "conv1=nn.Conv1d(in_channels=1, out_channels=8, kernel_size=2)\n",
-    "x = torch.randn(100,1,10)\n",
-    "y=conv1(x)\n",
-    "print(x.shape)\n",
-    "print(y.shape)"
+    "input_tensor = torch.randn(2, 5, 3)\n",
+    "print(input_tensor)\n",
+    "\n",
+    "# 创建 LayerNorm 层\n",
+    "layer_norm = nn.LayerNorm(input_tensor.size()[-1])\n",
+    "\n",
+    "# 进行归一化\n",
+    "output_tensor = layer_norm(input_tensor)\n",
+    "print(output_tensor)"
    ]
   }
  ],
